--- a/Antarctica.html
+++ b/Antarctica.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <Anartica> 
+    <Antarctica> 
     <title>Intercontinental Cuisine Corporation</title>
     
     <link rel="stylesheet" type="text/css" href="style.css">
